--- a/list-2-6.html
+++ b/list-2-6.html
@@ -365,7 +365,7 @@ document.body.addEventListener('input', POWERMODE);
 	  <div class="meta">
 	  <p class="time">2021-06-04 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(4138) <a href="/b2/663.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(4162) <a href="/b2/663.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -376,7 +376,7 @@ document.body.addEventListener('input', POWERMODE);
 	  <div class="meta">
 	  <p class="time">2021-03-09 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(2594) <a href="/b2/641.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(2611) <a href="/b2/641.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -395,7 +395,7 @@ document.body.addEventListener('input', POWERMODE);
 	  <div class="meta">
 	  <p class="time">2020-08-09 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(13231) <a href="/b2/612.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(13246) <a href="/b2/612.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -412,7 +412,7 @@ document.body.addEventListener('input', POWERMODE);
 	  <div class="meta">
 	  <p class="time">2020-08-02 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(4539) <a href="/b2/609.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(4556) <a href="/b2/609.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -423,7 +423,7 @@ document.body.addEventListener('input', POWERMODE);
 	  <div class="meta">
 	  <p class="time">2020-07-06 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(4284) <a href="/b2/605.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(4301) <a href="/b2/605.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -434,7 +434,7 @@ document.body.addEventListener('input', POWERMODE);
 	  <div class="meta">
 	  <p class="time">2020-04-18 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(2357) <a href="/b2/588.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(2376) <a href="/b2/588.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -445,7 +445,7 @@ document.body.addEventListener('input', POWERMODE);
 	  <div class="meta">
 	  <p class="time">2020-04-07 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(3576) <a href="/b2/576.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(3595) <a href="/b2/576.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -461,7 +461,7 @@ document.body.addEventListener('input', POWERMODE);
 	  <div class="meta">
 	  <p class="time">2020-04-06 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(3977) <a href="/b2/575.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(3993) <a href="/b2/575.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -472,7 +472,7 @@ document.body.addEventListener('input', POWERMODE);
 	  <div class="meta">
 	  <p class="time">2011-05-29 通过网页 
 	  	  	  <span class="ico jin">禁</span>	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(2717) <a href="/b2/259.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(2731) <a href="/b2/259.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -483,7 +483,7 @@ document.body.addEventListener('input', POWERMODE);
 	  <div class="meta">
 	  <p class="time">2011-05-28 通过网页 
 	  	  	  <span class="ico jin">禁</span>	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(3329) <a href="/b2/258.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(3344) <a href="/b2/258.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	<div class="pagination">
@@ -526,7 +526,7 @@ document.body.addEventListener('input', POWERMODE);
 
 <a target="_blank" href="https://v3.dconline.net.cn" title=""><strong style="font-size: 18px;font-weight: 600;color: #ff7505;" title="">
 
-<span class="unget" title="">6</span></strong><strong style="font-size: 18px;font-weight: 600;" title="">/42</strong>
+<span class="unget" title="">36</span></strong><strong style="font-size: 18px;font-weight: 600;" title="">/42</strong>
 </a><p style="font-weight: 100;font: 14px Helvetica Neue,Helvetica,PingFang SC,Tahoma,Arial,sans-serif;color: #353a55;" title=""><a target="_blank" href="https://v3.dconline.net.cn" title="">专业课</a></p>
 
 </div>
@@ -847,8 +847,8 @@ document.body.addEventListener('input', POWERMODE);
 <li><a href="https://i.mi.com/#/" target="_blank">小米云空间</a></li>
 <li><a href="https://layui.dev/" target="_blank">Layui 组件库</a></li>
 <li><a href="https://xptt.com" target="_blank">郑永博客</a></li>
-<li><a href="http://0393.com.cn" target="_blank">想上就上</a></li>
-<li><a href="http://www.xujianwei.com" target="_blank">徐建伟</a></li></ul>
+<li><a href="https://365.tf/" target="_blank">365博客</a></li>
+<li><a href="http://www.xulog.cn/" target="_blank">徐建伟</a></li></ul>
 		      </div>	  
 	 	  
 	 </div>
