--- a/list-2-1.html
+++ b/list-2-1.html
@@ -354,9 +354,9 @@ document.body.addEventListener('input', POWERMODE);
 </div>
 <div id="wrap">   <div id="content">
     <div id="main">
-	<div class="class"><i class="fa fa-folder-open"></i><span style="padding-left: 10px;">继续教育</span><span style="padding-left: 10px;">共 60 篇</span></div>	    	 
+	<div class="class"><i class="fa fa-folder-open"></i><span style="padding-left: 10px;">继续教育</span><span style="padding-left: 10px;">共 61 篇</span></div>	    	 
       <div id="log-587" class="post_list">
-	  <a href="/b2/587.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">2025年广东公需课学习指引及答案</h2></a>      <div class="excerpt">
+	  <a href="/b2/587.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">2025年度继续教育学时</h2></a>      <div class="excerpt">
 	  	  <div class="textPost" data-url="/b2/587.html"><center>
 <!-- 学时显示开始 -->
 <div class="xueshi" style="text-align: center;font-size: 26px;font-weight: 600;width: 124%;margin-left: -12%;padding: 0px 0px 10px;background-color: #FFF;overflow: hidden;">
@@ -518,7 +518,22 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2020-04-18 通过网页 
 	  <span class="ico">顶</span>	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(7187516) <a href="/b2/587.html#comments"><i class="iconfont icon-com"></i> 评论(10)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(7206978) <a href="/b2/587.html#comments"><i class="iconfont icon-com"></i> 评论(10)</a> 
+	 
+	</p></div></div> 
+	 
+      <div id="log-1145" class="post_list">
+	  <a href="/b2/1145.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">2025年秋季学期人教版义教新教材网络培训和答疑活动</h2></a>      <div class="excerpt">
+	  	  <div class="textPost" data-url="/b2/1145.html"><img src="/assets/file/2025/07/20250714.webp" style="max-width:100%;" loading="lazy">
+
+<p>（三）学时证书</p>
+<p>1.学员需完成至少一个年级培训内容的学习后，方可获得学时证书。每完成一个年级相关培训内容的学习即可获得相应学时。</p>
+<p>2.按规定注册、报名，并完成培训任务的学员可获得学时证书，本学科课程直播结束后<b><font size="3" color="#ff0000">第3天</font></b>可登录本人账号查看、打印本人学时证书。</p></div>	  
+	  </div>	
+	  <div class="meta">
+	  <p class="time">2025-07-10 通过手机 
+	  	  	  	  </p>
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(103) <a href="/b2/1145.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -529,7 +544,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2025-03-18 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(955) <a href="/b2/1091.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1001) <a href="/b2/1091.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -540,7 +555,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2025-01-25 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(932) <a href="/b2/1050.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(955) <a href="/b2/1050.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -554,7 +569,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2024-12-12 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1061) <a href="/b2/994.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1080) <a href="/b2/994.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -570,7 +585,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2024-11-25 通过手机 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1081) <a href="/b2/991.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1104) <a href="/b2/991.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -581,7 +596,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2024-09-05 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1253) <a href="/b2/961.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1268) <a href="/b2/961.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -592,7 +607,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2024-08-28 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1155) <a href="/b2/951.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1165) <a href="/b2/951.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -603,7 +618,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2024-08-28 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1498) <a href="/b2/950.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1516) <a href="/b2/950.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -614,22 +629,11 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2024-08-28 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1209) <a href="/b2/949.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
-	 
-	</p></div></div> 
-	 
-      <div id="log-943" class="post_list">
-	  <a href="/b2/943.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">2024人教版义务教育新教材网络培训</h2></a>      <div class="excerpt">
-	  	  <div class="textPost" data-url="/b2/943.html"><img src="/assets/file/2024/08/2024081701.webp" style="max-width:100%;"></div>	  
-	  </div>	
-	  <div class="meta">
-	  <p class="time">2024-08-17 通过网页 
-	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(4949) <a href="/b2/943.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1234) <a href="/b2/949.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	<div class="pagination">
-		<span class="info"> 共计：60 条记录 每页:10条</span><a href='list-2-1.html'>首页</a><a href='list-2-1.html'>&lt;</a><span class="current">1</span><a href='list-2-2.html'>2</a><a href='list-2-3.html'>3</a><a href='list-2-4.html'>4</a><a href='list-2-5.html'>5</a><a href='list-2-2.html'>&gt;</a><a href='list-2-6.html'>尾页</a>	</div>
+		<span class="info"> 共计：61 条记录 每页:10条</span><a href='list-2-1.html'>首页</a><a href='list-2-1.html'>&lt;</a><span class="current">1</span><a href='list-2-2.html'>2</a><a href='list-2-3.html'>3</a><a href='list-2-4.html'>4</a><a href='list-2-5.html'>5</a><a href='list-2-2.html'>&gt;</a><a href='list-2-7.html'>尾页</a>	</div>
     </div> 
 	<div id="sidebar"> 
      <div class="sidebar">
@@ -962,7 +966,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	       <div class="widget">
         <h3>热评文章</h3>     
 			 
-           <ul class="topic"><li><a href="587.html">2025年广东公需课学习指引及答案</a> <i class="iconfont icon-comm"></i> 10</li><li><a href="828.html">盛世华诞    举国同庆
+           <ul class="topic"><li><a href="587.html">2025年度继续教育学时</a> <i class="iconfont icon-comm"></i> 10</li><li><a href="828.html">盛世华诞    举国同庆
 </a> <i class="iconfont icon-comm"></i> 7</li><li><a href="683.html">（小考全部试卷）雷州市2021年小学六年级教学质量监测</a> <i class="iconfont icon-comm"></i> 6</li><li><a href="652.html">2021届毕业班集体照</a> <i class="iconfont icon-comm"></i> 3</li><li><a href="19.html">现在正在想办法给空间续费</a> <i class="iconfont icon-comm"></i> 2</li><li><a href="753.html">记录第五轮全员核酸检测——在店前山尾当采样志愿者</a> <i class="iconfont icon-comm"></i> 2</li><li><a href="1032.html">雷州各镇的村庄简史及姓氏来源（调风篇）</a> <i class="iconfont icon-comm"></i> 2</li><li><a href="1.html">博客面前 人人可以是记者</a> <i class="iconfont icon-comm"></i> 1</li><li><a href="425.html">2013届毕业班集体照</a> <i class="iconfont icon-comm"></i> 1</li><li><a href="697.html">2021年雷州市林氏优秀学子报名具体事项</a> <i class="iconfont icon-comm"></i> 1</li> </ul>
 	          </div>	  
 	       <div class="widget">
