--- a/1145.html
+++ b/1145.html
@@ -174,7 +174,7 @@ $(document).ready(function() {
     <div class="dialog-mask1" onclick="closeLogin1()"></div>
     <div class="dialog-plane1">
         <h2>管理员登陆</h2>
-        <form class="search-form1" action="https://linji.cn/index.php?act=dologin" method="post">
+        <form class="search-form1" action="/index.php?act=dologin" method="post">
             <div class="search-form-input-plane1">
                 <input type="password" class="search-keyword1" name="pass" autocomplete="on" placeholder="输入密码..." required="required" value="">
 	   <input name="l" value="" type="hidden">
@@ -194,7 +194,7 @@ $(document).ready(function() {
     <div class="dialog-mask" onclick="closeSearch()"></div>
     <div class="dialog-plane">
         <h2>搜索内容</h2>
-        <form class="search-form" action="https://linji.cn/index.php" method="get" role="search">
+        <form class="search-form" action="/index.php" method="get" role="search">
             <div class="search-form-input-plane">
                 <input type="text" class="search-keyword" name="s" autocomplete="on" placeholder="搜索内容" required="required" value="">
             </div>
@@ -358,7 +358,7 @@ document.body.addEventListener('input', POWERMODE);
     margin-left: 0px;
 }
 </style></div>
-	   <form method="get" class="search-form" action="https://linji.cn/index.php"> <input class="search-text" name="s" autocomplete="on" placeholder="输入关键词搜索..." required="required" type="text" value=""> <button class="search-submit" alt="搜索" type="submit">搜索</button></form>
+	   <form method="get" class="search-form" action="/index.php"> <input class="search-text" name="s" autocomplete="on" placeholder="输入关键词搜索..." required="required" type="text" value=""> <button class="search-submit" alt="搜索" type="submit">搜索</button></form>
 	   </div>   
 </div>
 </div>
@@ -688,7 +688,7 @@ position: relative;
     </div> 
 </div>
 <table border="1" style="text-align: center;font-size: 17px;line-height: 1.5em;width: 100%;" cellspacing="0" cellpadding="15"><tbody><tr style="font-weight: 600;"><td>学科</td><td>直播时间</td></tr><tr><td>小学英语(PEP)</td><td>7月14日—7月15日</td></tr><tr><td>小学英语(精通)</td><td>7月14日—7月15日</td></tr><tr><td>小学科学</td><td>7月14日—7月15日</td></tr><tr><td>艺术·唱游·音乐(小学)</td><td>7月14日—7月15日</td></tr><tr><td>艺术·美术(小学)</td><td>7月14日—7月15日</td></tr><tr><td>义教体育与健康</td><td>7月14日—7月15日</td></tr><tr><td>义教信息科技</td><td>7月14日-7月15日</td></tr><tr><td>小学语文</td><td>7月16日一7月17日</td></tr><tr><td>初中数学</td><td>7月18日—7月19日</td></tr><tr><td>初中物理</td><td>7月18日—7月19日</td></tr><tr><td>初中化学</td><td>7月18日—7月19日</td></tr><tr><td>初中生物学</td><td>7月18日—7月19日</td></tr><tr><td>初中英语</td><td>7月18日—7月19日</td></tr><tr><td>小学数学</td><td>7月20日—7月21日</td></tr><tr><td>初中语文</td><td>7月22日-7月23日</td></tr><tr><td>初中历史</td><td>7月22日—7月23日</td></tr><tr><td>初中地理</td><td>7月24日—7月25日</td></tr><tr><td>艺术·音乐(初中)</td><td>7月24日—7月25日</td></tr><tr><td>艺术·美术(初中)</td><td>7月24日—7月25日</td></tr><tr><td>初中日语</td><td>7月24日—7月25日</td></tr><tr><td>初中俄语</td><td>7月24日—7月25日</td></tr><tr><td>艺术·影视(含数字媒体艺术)/戏剧(含戏曲)/舞蹈</td><td>7月24日—7月25日</td></tr><tr><td>小学道德与法治</td><td>7月24日—7月25日</td></tr><tr><td>初中道德与法治</td><td>7月24日—7月25日</td></tr><tr><td>习近平新时代中国特色社会主义思想学生读本(小学)</td><td>7月26日</td></tr></tbody></table></center></div>
-<p class="time clb">继续教育 2025-07-10 15:39:20 通过 手机 <i class="iconfont icon-view"></i> 浏览(3698) <span> <a href="javascript:printme()" target="_self" style="color: #999;"><i class="fa fa-print"></i> 打印</a></span></p>
+<p class="time clb">继续教育 2025-07-10 15:39:20 通过 手机 <i class="iconfont icon-view"></i> 浏览(3710) <span> <a href="javascript:printme()" target="_self" style="color: #999;"><i class="fa fa-print"></i> 打印</a></span></p>
 <p class="navPost">  
 	<a href="JavaScript:history.back();">返回</a>&nbsp; <a href="JavaScript:DotRoll('#formpl')">我要评论</a></p></div></div>  
 <!-- 上一篇 下一篇开始 -->
