--- a/1199.html
+++ b/1199.html
@@ -174,7 +174,7 @@ $(document).ready(function() {
     <div class="dialog-mask1" onclick="closeLogin1()"></div>
     <div class="dialog-plane1">
         <h2>管理员登陆</h2>
-        <form class="search-form1" action="https://linji.cn/index.php?act=dologin" method="post">
+        <form class="search-form1" action="/index.php?act=dologin" method="post">
             <div class="search-form-input-plane1">
                 <input type="password" class="search-keyword1" name="pass" autocomplete="on" placeholder="输入密码..." required="required" value="">
 	   <input name="l" value="" type="hidden">
@@ -194,7 +194,7 @@ $(document).ready(function() {
     <div class="dialog-mask" onclick="closeSearch()"></div>
     <div class="dialog-plane">
         <h2>搜索内容</h2>
-        <form class="search-form" action="https://linji.cn/index.php" method="get" role="search">
+        <form class="search-form" action="/index.php" method="get" role="search">
             <div class="search-form-input-plane">
                 <input type="text" class="search-keyword" name="s" autocomplete="on" placeholder="搜索内容" required="required" value="">
             </div>
@@ -358,7 +358,7 @@ document.body.addEventListener('input', POWERMODE);
     margin-left: 0px;
 }
 </style></div>
-	   <form method="get" class="search-form" action="https://linji.cn/index.php"> <input class="search-text" name="s" autocomplete="on" placeholder="输入关键词搜索..." required="required" type="text" value=""> <button class="search-submit" alt="搜索" type="submit">搜索</button></form>
+	   <form method="get" class="search-form" action="/index.php"> <input class="search-text" name="s" autocomplete="on" placeholder="输入关键词搜索..." required="required" type="text" value=""> <button class="search-submit" alt="搜索" type="submit">搜索</button></form>
 	   </div>   
 </div>
 </div>
@@ -624,7 +624,7 @@ document.body.addEventListener('input', POWERMODE);
 </p><p>2.分散自主培训的学时统计：各学科培训时间内，学员须使用本人账号登录参加培训，学习时长自动计入本人账号，无需扫码签到。
 </p><p>（四）学时证书</p><p>1.学员需完成至少一个年级培训内容的学习后，方可获得学时证书。每完成一个年级相关培训内容的学习即可获得相应学时。
 </p><p>2.按规定注册、报名，并完成培训任务的学员可获得学时证书，本学科课程直播结束后第3天可登录本人账号查看、打印本人学时证书。</p><center></center></div>
-<p class="time clb">继续教育 2026-01-15 12:21:48 通过 网页 <i class="iconfont icon-view"></i> 浏览(138) <span> <a href="javascript:printme()" target="_self" style="color: #999;"><i class="fa fa-print"></i> 打印</a></span></p>
+<p class="time clb">继续教育 2026-01-15 12:21:48 通过 网页 <i class="iconfont icon-view"></i> 浏览(151) <span> <a href="javascript:printme()" target="_self" style="color: #999;"><i class="fa fa-print"></i> 打印</a></span></p>
 <p class="navPost">  
 	<a href="JavaScript:history.back();">返回</a>&nbsp; <a href="JavaScript:DotRoll('#formpl')">我要评论</a></p></div></div>  
 <!-- 上一篇 下一篇开始 -->
