--- a/605.html
+++ b/605.html
@@ -174,7 +174,7 @@ $(document).ready(function() {
     <div class="dialog-mask1" onclick="closeLogin1()"></div>
     <div class="dialog-plane1">
         <h2>管理员登陆</h2>
-        <form class="search-form1" action="https://linji.cn/index.php?act=dologin" method="post">
+        <form class="search-form1" action="/index.php?act=dologin" method="post">
             <div class="search-form-input-plane1">
                 <input type="password" class="search-keyword1" name="pass" autocomplete="on" placeholder="输入密码..." required="required" value="">
 	   <input name="l" value="" type="hidden">
@@ -194,7 +194,7 @@ $(document).ready(function() {
     <div class="dialog-mask" onclick="closeSearch()"></div>
     <div class="dialog-plane">
         <h2>搜索内容</h2>
-        <form class="search-form" action="https://linji.cn/index.php" method="get" role="search">
+        <form class="search-form" action="/index.php" method="get" role="search">
             <div class="search-form-input-plane">
                 <input type="text" class="search-keyword" name="s" autocomplete="on" placeholder="搜索内容" required="required" value="">
             </div>
@@ -358,7 +358,7 @@ document.body.addEventListener('input', POWERMODE);
     margin-left: 0px;
 }
 </style></div>
-	   <form method="get" class="search-form" action="https://linji.cn/index.php"> <input class="search-text" name="s" autocomplete="on" placeholder="输入关键词搜索..." required="required" type="text" value=""> <button class="search-submit" alt="搜索" type="submit">搜索</button></form>
+	   <form method="get" class="search-form" action="/index.php"> <input class="search-text" name="s" autocomplete="on" placeholder="输入关键词搜索..." required="required" type="text" value=""> <button class="search-submit" alt="搜索" type="submit">搜索</button></form>
 	   </div>   
 </div>
 </div>
@@ -602,7 +602,7 @@ document.body.addEventListener('input', POWERMODE);
 <div  id="printview">
 <h1>2020继续教育学习</h1><div class="text">
 <p>【通知一】2020年我省教师公需课学习网站改为“广东省教师继续教育管理信息系统”（网址<a href="https://jspx.gdedu.gov.cn/jspx/" target="_blank">https://jspx.gdedu.gov.cn/jspx/</a>），请各校通知教师及时登录学习（教师个人登录账号：身份证号码；原始密码：身份证号码后六位数字），并确保2020年12月31日前完成学习任务。</p><p>【通知二】《广东省教育厅关于开展2020年教师继续教育专题培训通知》已发布在OA系统，请各校按通知要求认真组织教师参加本次专题培训，按时完成学习任务（心理健康教育和师德师风教育专题培训纳入我省2020教师继续教育专业课必修课程，各4学时）。学习网址同上。</p><p>以上培训学习涉及到教师资格证的“五年一审”工作，各校务必高度重视，认真落实。</p></div>
-<p class="time clb">继续教育 2020-07-06 22:57:33 通过 网页 <i class="iconfont icon-view"></i> 浏览(4843) <span> <a href="javascript:printme()" target="_self" style="color: #999;"><i class="fa fa-print"></i> 打印</a></span></p>
+<p class="time clb">继续教育 2020-07-06 22:57:33 通过 网页 <i class="iconfont icon-view"></i> 浏览(4848) <span> <a href="javascript:printme()" target="_self" style="color: #999;"><i class="fa fa-print"></i> 打印</a></span></p>
 <p class="navPost">  
 	<a href="JavaScript:history.back();">返回</a>&nbsp; <a href="JavaScript:DotRoll('#formpl')">我要评论</a></p></div></div>  
 <!-- 上一篇 下一篇开始 -->
