--- a/707.html
+++ b/707.html
@@ -174,7 +174,7 @@ $(document).ready(function() {
     <div class="dialog-mask1" onclick="closeLogin1()"></div>
     <div class="dialog-plane1">
         <h2>管理员登陆</h2>
-        <form class="search-form1" action="https://linji.cn/index.php?act=dologin" method="post">
+        <form class="search-form1" action="/index.php?act=dologin" method="post">
             <div class="search-form-input-plane1">
                 <input type="password" class="search-keyword1" name="pass" autocomplete="on" placeholder="输入密码..." required="required" value="">
 	   <input name="l" value="" type="hidden">
@@ -194,7 +194,7 @@ $(document).ready(function() {
     <div class="dialog-mask" onclick="closeSearch()"></div>
     <div class="dialog-plane">
         <h2>搜索内容</h2>
-        <form class="search-form" action="https://linji.cn/index.php" method="get" role="search">
+        <form class="search-form" action="/index.php" method="get" role="search">
             <div class="search-form-input-plane">
                 <input type="text" class="search-keyword" name="s" autocomplete="on" placeholder="搜索内容" required="required" value="">
             </div>
@@ -358,7 +358,7 @@ document.body.addEventListener('input', POWERMODE);
     margin-left: 0px;
 }
 </style></div>
-	   <form method="get" class="search-form" action="https://linji.cn/index.php"> <input class="search-text" name="s" autocomplete="on" placeholder="输入关键词搜索..." required="required" type="text" value=""> <button class="search-submit" alt="搜索" type="submit">搜索</button></form>
+	   <form method="get" class="search-form" action="/index.php"> <input class="search-text" name="s" autocomplete="on" placeholder="输入关键词搜索..." required="required" type="text" value=""> <button class="search-submit" alt="搜索" type="submit">搜索</button></form>
 	   </div>   
 </div>
 </div>
@@ -686,7 +686,7 @@ document.body.addEventListener('input', POWERMODE);
 <p style="text-indent:40px;">4、听了陈星宇老师的四年级科学课《感受我们的呼吸》，不但能学习她的教法与学法，更让我们学习到卫生健康的知识，陈老师生动的课堂吸引孩子们，更吸引了听课的老师们。真的是不虚些行。</p>
 
 <p style="text-indent:40px;">总之，跟岗学习，忙碌而充实，辛苦而快乐，时间虽然短暂，但收获也不少，它让我开阔了眼界，提高了我的理论素养，提升了我的教学教育水平，令我受益匪浅。教坛无边，学海无涯。回到自己的工作岗位后，我们必将自己所学，融入到工作中，把优质资源、做法，带回我们的学校，点燃星星之火，为家乡教育事业的进一步发展贡献自己的力量。</p></div>
-<p class="time clb">继续教育 2021-11-26 20:28:54 通过 网页 <i class="iconfont icon-view"></i> 浏览(3087) <span> <a href="javascript:printme()" target="_self" style="color: #999;"><i class="fa fa-print"></i> 打印</a></span></p>
+<p class="time clb">继续教育 2021-11-26 20:28:54 通过 网页 <i class="iconfont icon-view"></i> 浏览(3094) <span> <a href="javascript:printme()" target="_self" style="color: #999;"><i class="fa fa-print"></i> 打印</a></span></p>
 <p class="navPost">  
 	<a href="JavaScript:history.back();">返回</a>&nbsp; <a href="JavaScript:DotRoll('#formpl')">我要评论</a></p></div></div>  
 <!-- 上一篇 下一篇开始 -->
